force-app/main/default/objects/Controle__c/Controle__c.object-meta.xml
<CustomObject>
    <label>Contrôle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Numéro du contrôle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrôles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>