force-app/main/default/objects/Controle__c/fields/ACC_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>ACC_EXTId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ACC_EXTId_SIPanel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>