force-app/main/default/objects/Controle__c/fields/ASS_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>ASS_EXTId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numéro de l&apos;audimètre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>