force-app/main/default/objects/Controle__c/fields/Audimetre__c.field-meta.xml
<CustomField>
    <fullName>Audimetre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audimètre</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contrôles</relationshipLabel>
    <relationshipName>Controles</relationshipName>
    <type>Lookup</type>
</CustomField>