force-app/main/default/objects/Controle__c/fields/Cause_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Cause_de_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>