force-app/main/default/objects/Controle__c/fields/CON_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>CON_EXTId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numéro du membre du foyer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>