force-app/main/default/objects/Controle__c/fields/Date_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de contrôle</label>
    <type>DateTime</type>
</CustomField>