force-app/main/default/objects/Controle__c/fields/Duree_du_controle__c.field-meta.xml
<CustomField>
    <fullName>Duree_du_controle__c</fullName>
    <label>Durée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plus d&apos;une heure</fullName>
            </value>
            <value>
                <fullName>Entre 10mn et 1 heure</fullName>
            </value>
            <value>
                <fullName>Moins de 10mn</fullName>
            </value>
            <value>
                <fullName>De 10 à 15mn</fullName>
                <isActive>false</isActive>
                <label>De 10 à 15mn</label>
            </value>
            <value>
                <fullName>De 15 à 60mn</fullName>
                <isActive>false</isActive>
                <label>De 15 à 60mn</label>
            </value>
            <value>
                <fullName>De 5 à 10mn</fullName>
                <isActive>false</isActive>
                <label>De 5 à 10mn</label>
            </value>
            <value>
                <fullName>Moins de 5mn</fullName>
                <isActive>false</isActive>
                <label>Moins de 5mn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>