force-app/main/default/objects/Controle__c/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Contrôles</relationshipLabel>
    <relationshipName>Controles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>