force-app/main/default/objects/Controle__c/fields/Foyer_Paneliste_ExtId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>Foyer_Paneliste_ExtId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Foyer_Paneliste_ExtId_SIPanel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>