force-app/main/default/objects/Controle__c/fields/Id_origine__c.field-meta.xml
<CustomField>
    <fullName>Id_origine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id origine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>