force-app/main/default/objects/Controle__c/fields/Joint_non_joint__c.field-meta.xml
<CustomField>
    <fullName>Joint_non_joint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint</label>
    <type>Checkbox</type>
</CustomField>