force-app/main/default/objects/Controle__c/fields/Libelle_de_pre_codage__c.field-meta.xml
<CustomField>
    <fullName>Libelle_de_pre_codage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Libellé de pré-codage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>