force-app/main/default/objects/Controle__c/fields/Membre_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Membre_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Composition du foyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contrôles</relationshipLabel>
    <relationshipName>Controles</relationshipName>
    <type>Lookup</type>
</CustomField>