force-app/main/default/objects/Controle__c/fields/Motif_de_cloture__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_cloture__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Motif de clôture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>