force-app/main/default/objects/Controle__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <displayFormat>CTRL - {0000}</displayFormat>
    <label>Numéro</label>
    <type>AutoNumber</type>
</CustomField>