force-app/main/default/objects/Controle__c/fields/Referentiel_alarme__c.field-meta.xml
<CustomField>
    <fullName>Referentiel_alarme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel alarme</label>
    <referenceTo>Referentiel_alarme__c</referenceTo>
    <relationshipLabel>Contrôles</relationshipLabel>
    <relationshipName>Controles</relationshipName>
    <type>Lookup</type>
</CustomField>