force-app/main/default/objects/Controle__c/fields/Resultat_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Resultat_d_appel__c</fullName>
    <label>Résultat d&apos;appel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_type_de_controle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Joint</fullName>
            </value>
            <value>
                <fullName>Commande Beacon envoyée</fullName>
            </value>
            <value>
                <fullName>Commande Beacon non envoyée</fullName>
            </value>
            <value>
                <fullName>Absence de mouvement justifiée</fullName>
            </value>
            <value>
                <fullName>Anomalie carte SIM</fullName>
            </value>
            <value>
                <fullName>Attache cassée</fullName>
            </value>
            <value>
                <fullName>Bluetooth</fullName>
            </value>
            <value>
                <fullName>Chute temporaire</fullName>
            </value>
            <value>
                <fullName>J+22 à J+44</fullName>
            </value>
            <value>
                <fullName>NON PORTE écouté au casque</fullName>
            </value>
            <value>
                <fullName>Pager cassé</fullName>
            </value>
            <value>
                <fullName>Pager non chargé</fullName>
            </value>
            <value>
                <fullName>Pager non porté</fullName>
            </value>
            <value>
                <fullName>Suspendu</fullName>
            </value>
            <value>
                <fullName>Vacancier</fullName>
            </value>
            <value>
                <fullName>Ecoute au casque bluetooth</fullName>
            </value>
            <value>
                <fullName>Manip KO</fullName>
            </value>
            <value>
                <fullName>Pager (Trop lourd)</fullName>
            </value>
            <value>
                <fullName>Pager perdu</fullName>
            </value>
            <value>
                <fullName>Problème de batterie</fullName>
            </value>
            <value>
                <fullName>Audience justifiée</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Absence hors France</fullName>
            </value>
            <value>
                <fullName>Appelé la veille</fullName>
            </value>
            <value>
                <fullName>Au moins 1 beacons associes au foyer est inactif</fullName>
            </value>
            <value>
                <fullName>Autre motif</fullName>
            </value>
            <value>
                <fullName>Beacons associes au foyer - 20% batterie</fullName>
            </value>
            <value>
                <fullName>Dimanche</fullName>
            </value>
            <value>
                <fullName>Fiche clôturée automatiquement J+1</fullName>
            </value>
            <value>
                <fullName>Jour férié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>