force-app/main/default/objects/Controle__c/fields/Resultat_joint__c.field-meta.xml
<CustomField>
    <fullName>Resultat_joint__c</fullName>
    <label>Résultat joint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_type_de_controle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement au cable compris dans les charges</fullName>
            </value>
            <value>
                <fullName>Attente télécommande</fullName>
            </value>
            <value>
                <fullName>Aud inf 10min (séquence d&apos;audience &lt; 10 mins)</fullName>
            </value>
            <value>
                <fullName>Audim. débranché par le foyer</fullName>
            </value>
            <value>
                <fullName>Autre usage confirmé</fullName>
            </value>
            <value>
                <fullName>Autre usage longue durée confirmé</fullName>
            </value>
            <value>
                <fullName>Autres bouquet que &quot;&quot;csat&quot;&quot;</fullName>
            </value>
            <value>
                <fullName>Chaîne(s) étrangère(s)</fullName>
            </value>
            <value>
                <fullName>Chaîne(s) non signée(s)</fullName>
            </value>
            <value>
                <fullName>Chaines canal + regardées en clair</fullName>
            </value>
            <value>
                <fullName>Chaînes constatées dans les audiences : Fausse incohérence</fullName>
            </value>
            <value>
                <fullName>Chaînes faisant parties de l&apos;abonnement de base adsl</fullName>
            </value>
            <value>
                <fullName>Changement de fréquence</fullName>
            </value>
            <value>
                <fullName>Changement FAI</fullName>
            </value>
            <value>
                <fullName>Changement IRD</fullName>
            </value>
            <value>
                <fullName>Configuration ok</fullName>
            </value>
            <value>
                <fullName>Confirme audience autre usage</fullName>
            </value>
            <value>
                <fullName>Console de jeux, Pan a oublié sa lettre</fullName>
            </value>
            <value>
                <fullName>Déménagement en cours</fullName>
            </value>
            <value>
                <fullName>Désabonné</fullName>
            </value>
            <value>
                <fullName>DMD non relié au routeur</fullName>
            </value>
            <value>
                <fullName>Enregistrement vu et réalisé hors foyer</fullName>
            </value>
            <value>
                <fullName>Foyer a regardé tv</fullName>
            </value>
            <value>
                <fullName>Foyer a utilisé TV sans regarder les chaînes signées</fullName>
            </value>
            <value>
                <fullName>Foyer en vacances</fullName>
            </value>
            <value>
                <fullName>Foyer joint. N&apos;a pas regardé de chaine signée (autre usage)</fullName>
            </value>
            <value>
                <fullName>Foyer pas regardé TV, pbm déc/box</fullName>
            </value>
            <value>
                <fullName>Foyer pas regardé TV, pbm réception tv</fullName>
            </value>
            <value>
                <fullName>Foyer pas regardé TV, pbm sonde dmd</fullName>
            </value>
            <value>
                <fullName>Foyer s&apos;est abonné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>