force-app/main/default/objects/Controle__c/fields/Resultat_non_joint__c.field-meta.xml
<CustomField>
    <fullName>Resultat_non_joint__c</fullName>
    <label>Résultat non joint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_type_de_controle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement au cable compris dans les charges</fullName>
            </value>
            <value>
                <fullName>Appel entrant / sortant récent hors contrôle</fullName>
            </value>
            <value>
                <fullName>Appel récent</fullName>
            </value>
            <value>
                <fullName>Appel récent pour autre type de contrôle</fullName>
            </value>
            <value>
                <fullName>Appel sur même type de contrôle</fullName>
            </value>
            <value>
                <fullName>Attente télecommande</fullName>
            </value>
            <value>
                <fullName>Aud. s&apos;est reconnecté tt seul</fullName>
            </value>
            <value>
                <fullName>Autre usage longue durée confirmé</fullName>
            </value>
            <value>
                <fullName>Autres bouquet que &quot;&quot;csat&quot;&quot;</fullName>
            </value>
            <value>
                <fullName>Chaines canal + regardées en clair</fullName>
            </value>
            <value>
                <fullName>Changement FAI</fullName>
            </value>
            <value>
                <fullName>Cumul NC + aud</fullName>
            </value>
            <value>
                <fullName>Déménagement en cours</fullName>
            </value>
            <value>
                <fullName>Déménagement/travaux</fullName>
            </value>
            <value>
                <fullName>DMD non relié au routeur</fullName>
            </value>
            <value>
                <fullName>Email envoyé</fullName>
            </value>
            <value>
                <fullName>En attente de solution</fullName>
            </value>
            <value>
                <fullName>F. vac./abs</fullName>
            </value>
            <value>
                <fullName>Foyer en vacances</fullName>
            </value>
            <value>
                <fullName>Foyer générant svt des audiences trop longues</fullName>
            </value>
            <value>
                <fullName>Foyer regardant bcp de chaines étrangères</fullName>
            </value>
            <value>
                <fullName>Ind abs la semaine</fullName>
            </value>
            <value>
                <fullName>Ind avec peu d&apos;audience</fullName>
            </value>
            <value>
                <fullName>Ind ne se connecte pas ou peu</fullName>
            </value>
            <value>
                <fullName>Ind ou foyer en vacances</fullName>
            </value>
            <value>
                <fullName>Ind utilise un pc non configuré</fullName>
            </value>
            <value>
                <fullName>Ind. concerné absent</fullName>
            </value>
            <value>
                <fullName>Inter ctrl. Aud.  en cours</fullName>
            </value>
            <value>
                <fullName>Inter en cours</fullName>
            </value>
            <value>
                <fullName>Inter récente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>