force-app/main/default/objects/Controle__c/fields/Sous_type_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_de_controle__c</fullName>
    <label>Sous type de contrôle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_controle__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>13</fullName>
                <label>Anomalie des données en base panel</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Anomalie lors du traitement des données d&apos;audience</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Audience individuelle &gt; 9h</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Individu sans activité Web cohérente</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Individus sans audience depuis 28 jours ou plus</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Foyers sans audience depuis 6 jours ou plus</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Foyer avec audience sans abo</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Foyer avec abo C+ sans audience</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Foyer sans activité routeur</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Foyer sans activité Web cohérente</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Non envoyé au Médiamat</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Rejeté Médiamat</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>TV On &gt; 12h</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Autres usages</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Autre cause technique</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Foyer vacancier longue durée</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Audimètre non connecté</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Audience individuelle &gt;7h</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Inconnu</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Foyers sans audience depuis 4 jours</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Foyers sans audience depuis plus de 4 jours</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Individus sans audience depuis 4 jours</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Individus sans audience depuis plus de 4 jours</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Statut audim. sans date</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Foyers sans audience depuis plus de 90 jours</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Foyers sans audience depuis plus de 180 jours</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Absence mouvement</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Absence collecte</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Pager OFF</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Pager éteint trop longtemps</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>