force-app/main/default/objects/Controle__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
                <default>true</default>
                <label>Actif</label>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Pré-codé</fullName>
            </value>
            <value>
                <fullName>Traité</fullName>
            </value>
            <value>
                <fullName>Abandonné</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>