force-app/main/default/objects/Controle__c/fields/tech_date_precodage__c.field-meta.xml
<CustomField>
    <fullName>tech_date_precodage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>tech_date_precodage</label>
    <type>Date</type>
</CustomField>