force-app/main/default/objects/Controle__c/fields/TECH_DAY_BTW_create_AND_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>TECH_DAY_BTW_create_AND_LastUpdate__c</fullName>
    <formula>DATEVALUE(CreatedDate)- DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_DAY_BTW_create_AND_LastUpdate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>