force-app/main/default/objects/Controle__c/fields/Tech_DureeCreationControle__c.field-meta.xml
<CustomField>
    <fullName>Tech_DureeCreationControle__c</fullName>
    <formula>Today() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_DureeCreationControle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>