force-app/main/default/objects/Controle__c/fields/tech_reconnecte__c.field-meta.xml
<CustomField>
    <fullName>tech_reconnecte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tech_reconnecte</label>
    <type>Checkbox</type>
</CustomField>