force-app/main/default/objects/Controle__c/fields/testFlux__c.field-meta.xml
<CustomField>
    <fullName>testFlux__c</fullName>
    <defaultValue>0</defaultValue>
    <label>testFlux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>