force-app/main/default/objects/Controle__c/fields/Type_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Type_de_controle__c</fullName>
    <label>Type de contrôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>Présence</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Autres usages</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Connexion</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Participation</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Réception/abonnement</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Non Répondant</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Participation Web</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Foyer vacancier longue durée</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Foyer vacancier</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Contrôle Beacon</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Installation SetMeter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>