force-app/main/default/objects/Controle__c/fields/Type_origine__c.field-meta.xml
<CustomField>
    <fullName>Type_origine__c</fullName>
    <label>Type origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Connexion</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Poste</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Présence</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Excel</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Cohérence</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autres usages</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>SetMeter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>