force-app/main/default/objects/Controle__c/recordTypes/Controle_AIP.recordType-meta.xml
<RecordType>
    <fullName>Controle_AIP</fullName>
    <active>true</active>
    <label>Contrôle AIP</label>
</RecordType>