force-app/main/default/objects/Controle__c/recordTypes/Controle_Mediamat_PaME.recordType-meta.xml
<RecordType>
    <fullName>Controle_Mediamat_PaME</fullName>
    <active>true</active>
    <label>Contrôle Mediamat/PaME</label>
</RecordType>