force-app/main/default/objects/Controle__c/listViews/Contr_les_actifs_du_jour_AIP.listView-meta.xml
<ListView>
    <fullName>Contr_les_actifs_du_jour_AIP</fullName>
    <columns>NAME</columns>
    <columns>Date_de_controle__c</columns>
    <columns>Foyer__c</columns>
    <columns>Type_de_controle__c</columns>
    <columns>Sous_type_de_controle__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Cause_de_controle__c</columns>
    <columns>Type_de_panel__c</columns>
    <columns>Statut__c</columns>
    <columns>Audimetre__c</columns>
    <columns>Requete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Controle__c.Controle_AIP</value>
    </filters>
    <filters>
        <field>Date_de_controle__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Audimetre__c</field>
        <operation>contains</operation>
        <value>pager</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Actif</value>
    </filters>
    <label>Contrôles actifs pager du jour AIP</label>
</ListView>