force-app/main/default/objects/Controle__c/listViews/Contr_les_actifs_installation_set_meter.listView-meta.xml
<ListView>
    <fullName>Contr_les_actifs_installation_set_meter</fullName>
    <columns>NAME</columns>
    <columns>Date_de_controle__c</columns>
    <columns>Foyer__c</columns>
    <columns>Type_de_controle__c</columns>
    <columns>Sous_type_de_controle__c</columns>
    <columns>Cause_de_controle__c</columns>
    <columns>Statut__c</columns>
    <columns>Audimetre__c</columns>
    <columns>Requete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Controle__c.Controle_AIP</value>
    </filters>
    <filters>
        <field>Type_de_controle__c</field>
        <operation>equals</operation>
        <value>12</value>
    </filters>
    <filters>
        <field>Sous_type_de_controle__c</field>
        <operation>equals</operation>
        <value>38</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Abandonné</value>
    </filters>
    <label>Contrôles actifs installation set meter</label>
</ListView>